# nauron-contracts

./: .coderabbit.yaml  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/external-contract/: Cargo.toml
crates/external-contract/src/: callback.rs  command.rs  lib.rs  requests.rs  result.rs
scripts/: loc_check.py
src/: apcoa.rs  common.rs  events.rs  health.rs  ingest.rs  knowledge.rs  knowledge_artifacts.rs  lib.rs  rdf.rs  requests.rs  topics.rs  types.rs  vector.rs
src/apcoa/: callback.rs
src/chat/: messages.rs  mod.rs  prompt.rs  reasoning.rs  sessions.rs
src/conditions/: job.rs  mod.rs  models.rs  types.rs  validation.rs
src/external_contract/: command.rs  requests.rs  result.rs
src/tests/: common.rs  ingest.rs  mir.rs  mod.rs  rdf.rs  vector.rs
src/tests/fixtures/: ingest_result_success_with_knowledge.json
