[package]
name = "nauron-external-contracts"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "External contract DTOs for Nauron integrations"
repository = "https://github.com/nauron-ai/nauron-contracts"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["std", "serde", "clock"] }
nauron-contracts = { path = "../.." }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23", features = ["v4", "serde"] }
utoipa = { version = "5.5.0", features = ["uuid", "chrono"] }
